[gd_scene load_steps=30 format=3 uid="uid://b1hysy784nfin"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_wtknf"]
[ext_resource type="Texture2D" uid="uid://ceu5fty3kcqfr" path="res://assets/Elementi/Zolfo.png" id="2_6ye2b"]
[ext_resource type="Texture2D" uid="uid://yy67y7a2j0vn" path="res://assets/Elementi/Cloro.png" id="3_e8ml3"]
[ext_resource type="Script" path="res://scripts/control.gd" id="3_g2la1"]
[ext_resource type="Texture2D" uid="uid://bh85wd0bijid8" path="res://assets/Elementi/Sodio.png" id="4_lol0l"]
[ext_resource type="Texture2D" uid="uid://nxjwp6iwl5wk" path="res://assets/Elementi/Potassio.png" id="5_ixsag"]
[ext_resource type="Texture2D" uid="uid://cr3xp6w57nkwf" path="res://assets/Elementi/Azoto.png" id="6_64f3m"]
[ext_resource type="Texture2D" uid="uid://d4hef2kmc20ga" path="res://assets/Elementi/Carbonio.png" id="7_c07w0"]
[ext_resource type="Texture2D" uid="uid://b1ifwxk62j5s4" path="res://assets/Elementi/Ossigeno.png" id="8_18mxa"]
[ext_resource type="Texture2D" uid="uid://u4hyd2k6iiov" path="res://assets/Elementi/Idrogeno.png" id="8_byl4x"]
[ext_resource type="FontFile" uid="uid://hdk1dxluhxk3" path="res://assets/fonts/alagard/alagard.ttf" id="11_gcnby"]
[ext_resource type="Texture2D" uid="uid://brh6deofre2e" path="res://icons8-question-mark-78.png" id="12_1y6dq"]
[ext_resource type="Texture2D" uid="uid://bqn40yjmw1b0x" path="res://scene/icon2.svg" id="12_dmce7"]
[ext_resource type="Texture2D" uid="uid://ctsvuj2f177ij" path="res://assets/video/1.PNG" id="13_45qle"]
[ext_resource type="Texture2D" uid="uid://c0pqpvfmttph6" path="res://assets/video/2.PNG" id="14_l7hr6"]
[ext_resource type="Texture2D" uid="uid://b27i0w88ucdtb" path="res://assets/video/3.PNG" id="15_66fcg"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_axoia"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_v7u6e"]
normal = Vector2(1, 0)
distance = -356.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ffe0l"]
normal = Vector2(0.0247858, 0.999693)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_vuo8t"]
normal = Vector2(-0.999916, 0.01293)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1504m"]
bg_color = Color(0.509804, 0.65098, 0.380392, 0.541176)

[sub_resource type="Theme" id="Theme_w5rwj"]
Label/styles/normal = SubResource("StyleBoxFlat_1504m")

[sub_resource type="SystemFont" id="SystemFont_rwb73"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_04whp"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.596232, 0.638707, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_ldnnu"]
default_font = ExtResource("11_gcnby")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/line_spacing = 4
Label/constants/outline_size = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/constants/shadow_outline_size = 1
Label/font_sizes/font_size = 36
Label/styles/normal = SubResource("StyleBoxFlat_04whp")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_olieg"]
size = Vector2(92.25, 48.25)

[sub_resource type="Animation" id="Animation_of3jc"]
resource_name = "show_video"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VideoSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("13_45qle"), ExtResource("14_l7hr6"), ExtResource("15_66fcg")]
}

[sub_resource type="Animation" id="Animation_oy7x7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VideoSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_dmce7")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lnm4o"]
_data = {
"RESET": SubResource("Animation_oy7x7"),
"show_video": SubResource("Animation_of3jc")
}

[node name="Minigiochi" type="Node2D"]
position = Vector2(4, 5)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-3, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(577, 649)
shape = SubResource("WorldBoundaryShape2D_axoia")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(358, 278)
shape = SubResource("WorldBoundaryShape2D_v7u6e")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(499, -3)
shape = SubResource("WorldBoundaryShape2D_ffe0l")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1153, 347)
shape = SubResource("WorldBoundaryShape2D_vuo8t")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_wtknf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(573.826, 316.091)
scale = Vector2(1.15035, 0.964345)

[node name="Label" type="Label" parent="."]
offset_left = 68.0
offset_top = 459.0
offset_right = 1075.0
offset_bottom = 589.0
theme = SubResource("Theme_w5rwj")

[node name="S" type="Button" parent="Label"]
layout_mode = 0
offset_left = 618.0
offset_top = 12.0
offset_right = 722.0
offset_bottom = 116.0
theme_override_fonts/font = SubResource("SystemFont_rwb73")
icon = ExtResource("2_6ye2b")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Cl" type="Button" parent="Label"]
layout_mode = 0
offset_left = 743.0
offset_top = 12.0
offset_right = 850.0
offset_bottom = 116.0
icon = ExtResource("3_e8ml3")
flat = true
expand_icon = true

[node name="Na" type="Button" parent="Label"]
layout_mode = 0
offset_left = 505.0
offset_top = 12.0
offset_right = 610.0
offset_bottom = 116.0
icon = ExtResource("4_lol0l")
flat = true
expand_icon = true

[node name="K" type="Button" parent="Label"]
layout_mode = 0
offset_left = 874.0
offset_top = 12.0
offset_right = 978.0
offset_bottom = 116.0
icon = ExtResource("5_ixsag")
flat = true
expand_icon = true

[node name="N" type="Button" parent="Label"]
layout_mode = 0
offset_left = 266.0
offset_top = 12.0
offset_right = 370.0
offset_bottom = 116.0
icon = ExtResource("6_64f3m")
flat = true
expand_icon = true

[node name="C" type="Button" parent="Label"]
layout_mode = 0
offset_left = 138.0
offset_top = 12.0
offset_right = 242.0
offset_bottom = 116.0
icon = ExtResource("7_c07w0")
flat = true
expand_icon = true

[node name="H" type="Button" parent="Label"]
layout_mode = 0
offset_left = 18.0
offset_top = 12.0
offset_right = 122.0
offset_bottom = 116.0
icon = ExtResource("8_byl4x")
flat = true
expand_icon = true

[node name="O" type="Button" parent="Label"]
layout_mode = 0
offset_left = 386.0
offset_top = 12.0
offset_right = 492.0
offset_bottom = 116.0
icon = ExtResource("8_18mxa")
flat = true
expand_icon = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 182.0
offset_top = 23.0
offset_right = 222.0
offset_bottom = 63.0
script = ExtResource("3_g2la1")

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = -136.0
offset_top = -15.0
offset_right = -27.0
offset_bottom = 43.0
theme = SubResource("Theme_ldnnu")
text = "Timer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="Control"]
wait_time = 90.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 318)

[node name="Aiuto" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Aiuto"]
position = Vector2(222, 43)
scale = Vector2(1.08203, 0.767228)
texture = ExtResource("12_1y6dq")

[node name="Area2D" type="Area2D" parent="Aiuto"]
position = Vector2(196, 27)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aiuto/Area2D"]
position = Vector2(25.875, 15.875)
shape = SubResource("RectangleShape2D_olieg")

[node name="VideoTutorial" type="Node2D" parent="."]

[node name="VideoSprite" type="Sprite2D" parent="VideoTutorial"]
visible = false
position = Vector2(404, 131)
scale = Vector2(0.783898, 0.635973)
texture = ExtResource("12_dmce7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="VideoTutorial"]
libraries = {
"": SubResource("AnimationLibrary_lnm4o")
}
autoplay = "show_video"

[connection signal="button_down" from="Label/S" to="GameManager" method="_on_s_button_down"]
[connection signal="button_down" from="Label/Cl" to="GameManager" method="_on_cl_button_down"]
[connection signal="button_down" from="Label/Na" to="GameManager" method="_on_na_button_down"]
[connection signal="button_down" from="Label/K" to="GameManager" method="_on_k_button_down"]
[connection signal="button_down" from="Label/N" to="GameManager" method="_on_n_button_down"]
[connection signal="button_down" from="Label/C" to="GameManager" method="_on_c_button_down"]
[connection signal="button_down" from="Label/H" to="GameManager" method="_on_h_button_down"]
[connection signal="button_down" from="Label/O" to="GameManager" method="_on_o_button_down"]
[connection signal="mouse_shape_entered" from="Aiuto/Area2D" to="GameManager" method="_on_area_2d_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="Aiuto/Area2D" to="GameManager" method="_on_area_2d_mouse_shape_exited"]
